welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:15: error: too many arguments for method faireFleur: ()Unit
  faireFleur(c);
            ^FlowerPot:18: error: too many arguments for method faireFleur: ()Unit
  faireFleur(c);
            ^FlowerPot:25: error: too many arguments for method faireFleur: ()Unit
  faireFleur(c);
            ^FlowerPot:31: error: too many arguments for method faireFleur: ()Unit
  faireFleur(c);
            ^FlowerPot:34: error: too many arguments for method faireFleur: ()Unit
  faireFleur(c);
            ^