welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def growFlowers(){
  def faireFleur(){
    baisseBrosse();
    avance(2);
    recule();
    gauche();
    avance();
    recule(2);
    avance();
    setCouleurBrosse(Color.yellow);
    droite();
    leveBrosse();
  }
  setCouleurBrosse(Color.red);
  faireFleur(c);
  avance(3);
  setCouleurBrosse(Color.cyan);
  faireFleur(c);
  recule(5);
  droite();
  avance(2);
  gauche();
  avance(2);
  setCouleurBrosse(Color.orange);
  faireFleur(c);
  recule(3);
  droite();
  avance(2);
  gauche();
  setCouleurBrosse(Color.pink);
  faireFleur(c);
  avance(3);
  setCouleurBrosse(Color.green);
  faireFleur(c);
  recule(5);
}